# COSC_3P32

./: .$ER Diagram.drawio.bkp  .$ER Diagram.drawio.dtmp  ER Diagram.drawio  ivy -q5.md  q1.md  q1_explination.md  q2.md  q3.md  q3.txt  q4.md  q5.md
app/: .gitignore  Cargo.toml  Rocket.toml  rusqlite.db
app/db/rusqlite/migrations/: up.sql
app/src/: main.rs
app/src/database/: admin.rs  api.rs  chats.rs  contacts.rs  events.rs  files.rs  ids.rs  messages.rs  mod.rs  sessions.rs  users.rs
app/static/: create_user.html  homepage.html  index.html  login.html  scratch.html  user_info.html
app/static/css/: homepage.css
app/static/src/: admin.js  chats.js  contacts.js  files.js  homepage.js  index.js  messages.js  sessions.js  users.js
obsidian/: q4.md  q5.md  submission.md
obsidian/.obsidian/: workspace.json
