[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
rocket = { version = "0.5.0", features = ["secrets", "tls", "json"] }
rocket_ws = { version = "0.1.0" }

rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"]}
rocket_sync_db_pools = { version = "0.1.0", features = ["sqlite_pool"]}